Added boilerplate code to initialize firebase

--- a/login.html
+++ b/login.html
@@ -19,11 +19,12 @@
 	  // Initialize Firebase
 	  // TODO: Replace with your project's customized code snippet
 	  var config = {
-	    apiKey: "<API_KEY>",
-	    authDomain: "<PROJECT_ID>.firebaseapp.com",
-	    databaseURL: "https://<DATABASE_NAME>.firebaseio.com",
-	    storageBucket: "<BUCKET>.appspot.com",
-	    messagingSenderId: "<SENDER_ID>",
+	    apiKey: "AIzaSyAAiz-tSG6vKmKHlryHnkVXq0okNpS5Ga4",
+	    authDomain: "musicapp4500.firebaseapp.com",
+	    databaseURL: "https://musicapp4500.firebaseio.com",
+	    projectId: "musicapp4500",
+	    storageBucket: "musicapp4500.appspot.com",
+	    messagingSenderId: "947399837764"
 	  };
 	  firebase.initializeApp(config);
 </script>
