Created User, Group, and Announcement model objects

--- a/login.html
+++ b/login.html
@@ -54,6 +54,9 @@
 </div>
 	
 
+	<script src="./functions/userModel.js"></script>
+	<script src="./functions/groupModel.js"></script>
+	<script src="./functions/announcementModel.js"></script>
 	<script src="functions/login.js"></script>
 </body>
 </html>
