centered login button on screen

--- a/login_bootstrap.html
+++ b/login_bootstrap.html
@@ -36,6 +36,7 @@
       color: #ffffff;
       background-color: #981E32;
       border-color: #EAAB00;
+      margin: 0 auto;
   }
 
   </style>
@@ -69,7 +70,9 @@
 	<br>
 	</div>
     <br>
-    <button type="submit" class="btn btn-default" id="login_submit" name="login_submit" value="Login">Submit</button>
+    <div class="text-center">
+    	<button type="submit" class="btn btn-default" id="login_submit" name="login_submit" value="Login">Login</button>
+    </div>
 
 	</form>
 
