--- a/login.html
+++ b/login.html
@@ -47,7 +47,7 @@
 <div class="container">
 
 <div class="jumbotron">
-	<img class="img-responsive" src="http://i1347.photobucket.com/albums/p720/the_total_jim/umsl_music_department_logo_zpsdnhrbwzh.jpg" alt="Music Department Logo">
+	<img class="img-responsive" src="./images/umsl_music_department_logo.jpg" alt="Music Department Logo">
   </div>
 
 <h1 id="status"></h1>
