--- a/announcements.html
+++ b/announcements.html
@@ -35,6 +35,7 @@
 
 <div class="test">
 	<button id="logout_button" class="btn btn-default">Logout!</button>
+	<button id="add_announcement_button" class="btn btn-default">New</button>
 </div>
 
 <div class="announcements_list">
