added back button to createAnnouncements.html page

--- a/createAnnouncement.html
+++ b/createAnnouncement.html
@@ -30,6 +30,8 @@
 <body>
     <div class="announcementEntry_root">
 
+        <button id="back_button" class="btn btn-default">Back</button>
+
         <h1>Manage Announcements</h1>
 
         <form id="announcementEntry_form" method="post">
